--- a/package.json
+++ b/package.json
@@ -8,61 +8,47 @@
   "repository": "https://github.com/ubeytdemirr/express-typescript-starter",
   "keywords": [],
   "scripts": {
-    "production": "nodemon -r dotenv/config  ./build/main",
-    "start": "nodemon -r dotenv/config  ./src/index.ts",
+    "dev": "nodemon -r dotenv/config ./src/index.ts dotenv_config_path=env/development.env",
+    "test": "jest",
     "build": "tsc -p tsconfig.json",
+    "start": "node -r dotenv/config  ./build/main dotenv_config_path=env/production.env",
+    "upgrade": "ncu -u && npm i",
+    "audit": "npm audit fix",
+    "maintain": "sudo npm-run-all upgrade audit fix:tslint",
     "fix:tslint": "tslint --fix --project .",
     "watch": "tsc"
   },
   "engines": {
-    "node": ">=14.16.0"
+    "node": ">=14.17.0"
   },
   "dependencies": {
-    "agenda": "^4.1.2",
-    "aws-sdk": "^2.813.0",
-    "bcrypt": "^5.0.0",
+    "chalk": "^2.4.2",
+    "console-stamp": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^4.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "module-alias": "^2.2.2",
-    "mongoose": "^5.11.8",
-    "multer": "^1.4.2",
-    "multer-s3": "^2.9.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "helmet": "^4.6.0",
+    "tslint": "^6.1.3",
+    "tslint-immutable": "^6.0.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.7",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/helmet": "0.0.48",
-    "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.10.3",
-    "@types/passport": "^1.0.4",
-    "babel-jest": "^26.6.3",
-    "dotenv": "^8.2.0",
-    "gh-pages": "^3.1.0",
-    "jest": "^26.6.3",
+    "@types/jest": "^27.0.1",
+    "@types/morgan": "^1.9.3",
+    "babel-jest": "^27.0.6",
+    "dotenv": "^10.0.0",
+    "jest": "^27.0.6",
     "js-test": "^0.0.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.1.1",
-    "ts-jest": "^26.5.5",
-    "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
+    "nodemon": "^2.0.12",
+    "npm-check-updates": "^11.8.3",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.2",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
+    "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-immutable": "^6.0.1",
-    "typescript": "^4.0.2"
-  },
-  "_moduleAliases": {
-    "@utils": "src/utils",
-    "@services": "src/services",
-    "@middlewares": "src/middlewares",
-    "@classes": "src/classes",
-    "@constants": "src/constants",
-    "@typings": "src/typings",
-    "@tests": "src/tests"
+    "typescript": "^4.3.5"
   }
 }
