--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "esnext",
     "outDir": "build/module",
-    "module": "esnext"
+    "module": "esnext",
+    "baseUrl": "src",
   },
   "exclude": [
     "node_modules/**"
